# risk-management-engine

./: README.md  pyproject.toml
samples/: portfolio.json  proposed_orders.jsonl
src/risk_management_engine/: __init__.py  __main__.py  engine.py  ingest.py  models.py  pipeline.py  protocols.py
src/risk_management_engine/rules/: __init__.py  drawdown.py  position_sizing.py  stop_loss.py
tests/: test_drawdown.py  test_engine.py  test_models.py  test_pipeline.py  test_position_sizing.py  test_stop_loss.py
