[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risk-management-engine"
version = "0.1.0"
description = "Pre-trade risk gate enforcing position sizing, stop-loss, and max drawdown limits."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "juanmmm21" }]
keywords = ["risk-management", "trading", "pre-trade", "drawdown", "position-sizing", "quant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
risk-management-engine = "risk_management_engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/risk_management_engine"]

[tool.hatch.build.targets.sdist]
include = ["src/risk_management_engine", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
